  - Automatically add SHEARS to the global_town_settings.farm_plot_allow_blocks list in the config.
    - Closes #4652.
0.96.5.11:
  - Fix possible NPE in TownyPlayerListener.
  - API: Added NationZoneTownBlockStatusEvent
    - A cancellable event thrown when a townblockstatus would return a NationZone result.
    - Cancelling this will have Towny return a UnclaimedZone result instead.
  - New Config Option: economy.bankruptcy.nation_tax.does_nation_tax_delete_conquered_towns_that_cannot_pay
    - Default: false
    - Does a conquered town which cannot pay the nation tax get deleted?
  - API: Added PreTownPaysNationTaxEvent
    - A cancellable event that precedes a town paying the nation tax.
    - Also allows you to alter the amount a town would pay in tax.
  - API: Add StatusScreenEvents
    - ResidentStatusScreenEvent, TownStatusScreenEvent, NationStatusScreenEvent
    - Makes it possible to add additional lines to the above objects' status screens.
  - Plot perm hud now shows full town name, courtesy of Warriorrrr with PR #4655.
0.96.5.12:
  - API: TownUnconquerEvent
    - Cancellable event allowing a plugin to prevent a town losing its conquered/occupied status.
  - Bump language files to 0.96.
  - Fix colour being stripped from warning messages on login.
    - Closes #4662.
  - Fix config mentioning a config section which doesn't exist any more.
0.96.5.13:
  - Make the build/destroy/switch/itemuse seen in the status screens' colour formattable.
  - Bump language files to 0.97.
  - Fix /towny top balance output being mis-ordered.
  - Fix arrows on the /n and /t list pages missing the comparator in the clickable commands.
  - Fix setting pages in /t and /n list when a comparator is specified.
  - New Commands: 
    - /t list by ruined 
    - /t list by bankrupt
    - Closes #4663.
  - New Permission Nodes:
    - towny.command.town.list.ruined
    - towny.command.town.list.bankrupt
    - both are child nodes of towny.command.town.list.*